Minor quality Fixes