@@ -6,24 +6,26 @@ import mr.cookie.spring6udemy.controllers.AuthorController;
 import mr.cookie.spring6udemy.model.dtos.AuthorDto;
 import mr.cookie.spring6udemy.services.AuthorService;
 import mr.cookie.spring6udemy.exceptions.NotFoundEntityException;
-import org.hamcrest.core.Is;
+import mr.cookie.spring6udemy.services.utils.MvcResponseWithAuthorContent;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.hamcrest.Matchers.notNullValue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -60,15 +62,16 @@ class AuthorControllerMockMvcTest {
 
     @Test
     void shouldGetAllAuthors() {
-        given(this.authorService.findAll()).willReturn(Collections.singletonList(AUTHOR_DTO));
+        given(this.authorService.findAll(anyInt(), anyInt()))
+                .willReturn(new PageImpl<>(List.of(AUTHOR_DTO)));
 
-        var authors = this.getAllAuthors();
+        var result = this.getAllAuthors(1);
 
-        assertThat(authors)
+        assertThat(result)
                 .isNotNull()
                 .containsOnly(AUTHOR_DTO);
 
-        verify(this.authorService).findAll();
+        verify(this.authorService).findAll(0, 42);
         verifyNoMoreInteractions(this.authorService);
     }
 
@@ -158,18 +161,33 @@ class AuthorControllerMockMvcTest {
 
     @SneakyThrows
     @NotNull
-    private List<AuthorDto> getAllAuthors() {
-        var strAuthors = this.mockMvc.perform(get("/author"))
-                .andExpect(status().isOk())
-                .andExpect(header().string(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE))
-                .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$.length()", Is.is(1)))
+    private List<AuthorDto> getAllAuthors(int expectedSize) {
+        var mockMvcResult = this.mockMvc.perform(get("/author")
+                        .param("pageNumber", "0")
+                        .param("pageSize", "42")
+                )
+                .andExpectAll(
+                        status().isOk(),
+                        header().string(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE),
+                        jsonPath("$", notNullValue()),
+                        jsonPath("$.content").isArray(),
+                        jsonPath("$.pageable").value(Pageable.unpaged().toString()),
+                        jsonPath("$.totalPages").value(1),
+                        jsonPath("$.totalElements").value(expectedSize),
+                        jsonPath("$.first").value(true),
+                        jsonPath("$.last").value(true),
+                        jsonPath("$.size").value(expectedSize),
+                        jsonPath("$.empty").value(false),
+                        jsonPath("$.sort", notNullValue()),
+                        jsonPath("$.number").value(0),
+                        jsonPath("$.numberOfElements").value(expectedSize)
+                )
                 .andReturn()
                 .getResponse()
                 .getContentAsString();
 
-        var arrayAuthors = this.objectMapper.readValue(strAuthors, AuthorDto[].class);
-        return Arrays.asList(arrayAuthors);
+        return this.objectMapper.readValue(mockMvcResult, MvcResponseWithAuthorContent.class)
+                .content();
     }
 
     @SneakyThrows
