@@ -6,24 +6,26 @@ import mr.cookie.spring6udemy.controllers.PublisherController;
 import mr.cookie.spring6udemy.model.dtos.PublisherDto;
 import mr.cookie.spring6udemy.services.PublisherService;
 import mr.cookie.spring6udemy.exceptions.NotFoundEntityException;
-import org.hamcrest.core.Is;
+import mr.cookie.spring6udemy.services.utils.MvcResponseWithPublisherContent;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.hamcrest.Matchers.notNullValue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -63,15 +65,16 @@ class PublisherControllerMockMvcTest {
 
     @Test
     void shouldGetAllPublishers() {
-        given(this.publisherService.findAll()).willReturn(Collections.singletonList(PUBLISHER_DTO));
+        given(this.publisherService.findAll(anyInt(), anyInt()))
+                .willReturn(new PageImpl<>(List.of(PUBLISHER_DTO)));
 
-        var result = this.getAllPublishers();
+        var result = this.getAllPublishers(1);
 
         assertThat(result)
                 .isNotNull()
                 .containsOnly(PUBLISHER_DTO);
 
-        verify(this.publisherService).findAll();
+        verify(this.publisherService).findAll(0, 7);
         verifyNoMoreInteractions(this.publisherService);
     }
 
@@ -161,18 +164,33 @@ class PublisherControllerMockMvcTest {
 
     @SneakyThrows
     @NotNull
-    private List<PublisherDto> getAllPublishers() {
-        var strPublishers = this.mockMvc.perform(get("/publisher"))
-                .andExpect(status().isOk())
-                .andExpect(header().string(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE))
-                .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$.length()", Is.is(1)))
+    private List<PublisherDto> getAllPublishers(int expectedSize) {
+        var mockMvcResult = this.mockMvc.perform(get("/publisher")
+                        .param("pageNumber", "0")
+                        .param("pageSize", "7")
+                )
+                .andExpectAll(
+                        status().isOk(),
+                        header().string(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE),
+                        jsonPath("$", notNullValue()),
+                        jsonPath("$.content").isArray(),
+                        jsonPath("$.pageable").value(Pageable.unpaged().toString()),
+                        jsonPath("$.totalPages").value(1),
+                        jsonPath("$.totalElements").value(expectedSize),
+                        jsonPath("$.first").value(true),
+                        jsonPath("$.last").value(true),
+                        jsonPath("$.size").value(expectedSize),
+                        jsonPath("$.empty").value(false),
+                        jsonPath("$.sort", notNullValue()),
+                        jsonPath("$.number").value(0),
+                        jsonPath("$.numberOfElements").value(expectedSize)
+                )
                 .andReturn()
                 .getResponse()
                 .getContentAsString();
 
-        var arrayPublishers = this.objectMapper.readValue(strPublishers, PublisherDto[].class);
-        return Arrays.asList(arrayPublishers);
+        return this.objectMapper.readValue(mockMvcResult, MvcResponseWithPublisherContent.class)
+                .content();
     }
 
     @SneakyThrows
